Kubernetes.Deploy/ingress/ingress-notsecure.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: web-api-app-ingress
  namespace: test-development
spec:
  rules:
    - host: webapi.sakaryaprojwebapi.xyz 
      http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-api-service
                port:
                  number: 80
